define swagger for add user
